--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,8 +1,50 @@
 .Title {
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 40;
   color: #010101;
 }
+
+ul {
+  list-style-type: none;
+  display: flex;
+  justify-items: center;
+  gap: 10px;
+  font-family: Verdana, sans-serif;
+  font-size: large;
+}
+
+/*
+a:link {
+    text-decoration: none;
+}
+*/
+
+/*
+.MenuItem {
+  margin-top: 10px;
+  padding: 8px 16px;
+  border-radius: 2px;
+  background-color: #5365ca;
+  text-align: center;
+  border: 0;
+  text-decoration: #fff;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 24px;
+  font-style: normal;
+  font-weight: 500;
+  width: 180px;
+  box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+
+.MenuItem:hover,
+.MenuItem:focus {
+  background-color: #3444ac;
+  text-decoration: #fff;
+}
+
+*/
